<resources>
    <string name="app_name">Hackathon App</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiMnZyazE1MDQiLCJhIjoiY2s0ZG96eG1vMDR3bTNrbzNpMXhueGZ5ZCJ9.7Y_vuGp3wa-y6zgV0r2sNg</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBg-aX8iEqgfqHQmEcqoJ6fWpCfuy5edok</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="retype_password">Retype Password</string>
    <string name="streetimage">StreetImage</string>

    <string name="sardar_patel_road">Sardar Patel Road</string>
    <string name="posted_on">Posted on:</string>
    <string name="_12th_dec_2019">12th Dec 2019</string>
    <string name="posted_by">Posted by:</string>
    <string name="siva_anbudan">Siva Anbudan</string>
    <string name="uploaded_on_xx_xx_xxxx">Uploaded On : XX/XX/XXXX</string>
    <string name="government_update_xxxxxxxx">Government Update : XXXXXXXX</string>
    <string name="issue_xxxxxxx">Issue : XXXXXXX</string>
    <string name="crown">crown</string>
    <string name="level_20">Level : 20</string>
    <string name="profile_image">profile image</string>
    <string name="mark_zucc">Mark@Zucc</string>
    <string name="email_id">Email ID</string>
    <string name="reputation">Reputation</string>
    <string name="blahblahbla_blahblahbla_blahblahbla">BlahBlahBla?BlahBlahBla?!BlahBlahBla:-(</string>
    <string name="_4_hours_ago">4 hours ago</string>
    <string name="luckymark123">LuckyMark123</string>
</resources>
