<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:elevation="10dp">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lin1"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/profile"
                android:layout_margin="5dp"
                android:id="@+id/profile_pic">

            </de.hdodenhof.circleimageview.CircleImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mark_zucc"
                android:layout_gravity="center"
                android:gravity="top"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/profile_name"
                android:textColor="#000000"
                android:layout_margin="10dp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="500dp"
            android:layout_below="@id/lin1"
            android:id="@+id/street_image"
            android:scaleType="centerCrop"
            android:src="@drawable/a">
        </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sardar_patel_road"
        android:textColor="#000"
        android:textStyle="bold"
        android:id="@+id/street_name"
        android:maxLines="8"
        android:layout_below="@id/street_image"
        android:layout_margin="5dp"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_below="@id/street_name"
        android:id="@+id/upload_date"
        android:maxLines="8"
        android:layout_margin="5dp"
        android:text="@string/uploaded_on_xx_xx_xxxx"
        android:textSize="20sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/issue"
        android:layout_margin="5dp"
        android:layout_below="@id/upload_date"
        android:text="@string/issue_xxxxxxx"
        android:textColor="#FF5722"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/issue"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:id="@+id/government_update"
        android:textColor="#0022FF"
        android:text="@string/government_update_xxxxxxxx"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>